# typst-webservice

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  check.yml
assets/: example.typ  input.json
src/: assets.rs  cli_tests.rs  error.rs  handlers.rs  lib.rs  logging.rs  main.rs  pdf.rs  tests.rs  zip.rs
