[package]
name = "typst-webservice"
version = "0.2.3"
edition = "2024"

[features]
default = []
chrono = []

[dependencies]
axum = "0.8"
axum-extra = { version = "0.12", features = ["attachment"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
utoipa = { version = "5.4", features = ["axum_extras", "debug"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
utoipa-axum = { version = "0.2", features = ["debug"] }
serde = "1.0"
typst = { version = "0.14" }
typst-pdf = { version = "0.14" }
tracing = "0.1"
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1", features = ["v4"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
async_zip = { version = "0.0.18", default-features = false, features = ["deflate", "tokio", "chrono"] }
chrono = "0.4"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
zip = "7.0"
