[package]
name = "typst-webservice"
version = "0.7.0"
license = "MIT"
edition = "2024"

[features]
default = ["server"]
server = ["dep:axum", "dep:axum-extra"]
chrono = []

[dependencies]
axum = { version = "0.8", optional = true }
axum-extra = { version = "0.12", features = ["attachment"], optional = true }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
serde = "1.0"
typst = { version = "0.14" }
typst-pdf = { version = "0.14" }
comemo = "0.5"
tracing = "0.1"
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1", features = ["v4"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
async_zip = { version = "0.0.18", default-features = false, features = ["deflate", "tokio", "chrono"] }
chrono = "0.4"

[[bin]]
name = "typst-webservice"
path = "src/main.rs"
required-features = ["server"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
zip = "8.1"
